all text content added

--- a/index.html
+++ b/index.html
@@ -9,16 +9,40 @@
   <body>
     <div class="header">
       <h1>Braodway Design</h1>
-        <<ul>
-        <li>Home</li>
-        <li>Process</li>
-        <li>Work</li>
-        <li>Team</li>
-        <li>Contact</li>
-        </ul>
+        <p>Home</p>
+        <p>Process</p>
+        <p>Work</p>
+        <p>Team</p>
+        <p>Contact</p>
+    </div>
+    <div class="section1">
+      <h2>Our Process</h2>
+      <p><img src="resources/images/identify.svg" alt="flow"></p>
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+      <p><img src="resources/images/understand.svg" alt="circle"></p>
+      <p><img src="" alt=""></p>
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+      <p><img src="resources/images/execute.svg" alt="arrow"></p>
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
+    </div>
+    <div class="section2">
+      <h4>Designed in New York</h4>
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+      <h3>Team</h3>
+      <p>We're hiring</p>
+      <h3>Contact</h3>
+      <p>Phone: (555) 555-5555</p>
+      <p>E-mail: text@example.com</p>
+      <p>Twitter: @test</p>
+    </div>
+    <div class="Footer">
+    <p>@broadway 2017</p> <a href="#">Home</a><a href="#">About</a><a href="#">Work</a><a href="#">Team</a><a href="#">Contact</a>  
     </div>
 
-  
 
   </body>
 </html>
