link to stylesheet updated

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-!<!DOCTYPE html>
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Broadway</title>
-    <link rel="stylesheet" href="resoucres/css/style.css" type="text/css">
+    <link rel="stylesheet" href="resources/css/style.css" type="text/css">
   </head>
   <body>
     <div class="header">
-      <h1>Braodway Design</h1>
+      <h1>Broadway Design</h1>
         <p>Home</p>
         <p>Process</p>
         <p>Work</p>
@@ -40,9 +40,7 @@
       <p>Twitter: @test</p>
     </div>
     <div class="Footer">
-    <p>@broadway 2017</p> <a href="#">Home</a><a href="#">About</a><a href="#">Work</a><a href="#">Team</a><a href="#">Contact</a>  
+    <p>@broadway 2017</p> <a href="#">Home</a><a href="#">About</a><a href="#">Work</a><a href="#">Team</a><a href="#">Contact</a>
     </div>
-
-
   </body>
 </html>
