styles applied to footer

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
       <p>E-mail: text@example.com</p>
       <p>Twitter: @test</p>
 
-    <div class="Footer">
-    <p>@broadway 2017</p> <a href="#">Home</a><a href="#">About</a><a href="#">Work</a><a href="#">Team</a><a href="#">Contact</a>
-    </div>
+    <div class="footer">
+    <p class=copyright>@broadway 2017 <a href="#">Home</a><a href="#">About</a><a href="#">Work</a><a href="#">Team</a><a href="#">Contact</a>
+</p>
+  </div>
   </body>
 </html>
