--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <body>
     <div class="header">
       <h1>Broadway Design</h1>
-        <p>Home</p>
-        <p>Process</p>
-        <p>Work</p>
-        <p>Team</p>
-        <p>Contact</p>
+        <p><a href="#">Home</a></p>
+        <p><a href="#process">Process</a></p>
+        <p><a href="#work">Work</a></p>
+        <p><a href="#team">Team</a></p>
+        <p><a href="#contact">Contact</a></p>
     </div>
 
     <div class="section1">
-      <h2>Our Process</h2>
+      <h2 id="process">Our Process</h2>
       <p><img src="resources/images/identify.svg" alt="flow"></p>
       <h3>Identify</h3>
       <p>We focus on the most important details.</p>
@@ -32,11 +32,11 @@
     <div class="section2">
       <h4>Designed in New York</h4>
     </div>
-      <h3>Portfolio</h3>
+      <h3 id="work">Portfolio</h3>
       <p>Coming Soon</p>
-      <h3>Team</h3>
+      <h3 id="team">Team</h3>
       <p>We're hiring</p>
-      <h3>Contact</h3>
+      <h3 id="contact">Contact</h3>
       <p>Phone: (555) 555-5555</p>
       <p>E-mail: text@example.com</p>
       <p>Twitter: @test</p>
